--- a/package.json
+++ b/package.json
@@ -6,10 +6,32 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.9.5",
     "@heroicons/react": "^2.0.16",
-    "next": "latest",
+    "@leap-ai/sdk": "^0.0.119",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.3.5",
+    "child_process": "^1.0.2",
+    "encoding": "^0.1.13",
+    "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
+    "micro": "^10.0.1",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "next": "^13.3.0",
+    "next-auth": "^4.21.1",
+    "node-replicate": "^2.0.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
+    "stripe": "^12.1.1",
+    "twilio": "^4.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -18,6 +40,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
