--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.0.16",
     "@leap-ai/sdk": "^0.0.119",
     "@reduxjs/toolkit": "^1.9.3",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.52.1",
     "axios": "^1.3.5",
     "child_process": "^1.0.2",
@@ -22,6 +23,7 @@
     "next": "^13.3.0",
     "next-auth": "^4.21.1",
     "node-replicate": "^2.0.0",
+    "nodemailer": "^6.9.3",
     "openai": "^3.2.1",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
