--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^38.1.1",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@google-cloud/storage": "^6.9.5",
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.16",
     "@leap-ai/sdk": "^0.0.119",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.52.1",
+    "@tiptap/pm": "^2.0.4",
+    "@tiptap/react": "^2.0.4",
+    "@tiptap/starter-kit": "^2.0.4",
     "axios": "^1.3.5",
     "child_process": "^1.0.2",
+    "ckeditor4-react": "^4.3.0",
+    "draft-js": "^0.11.7",
     "encoding": "^0.1.13",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
@@ -25,27 +37,36 @@
     "node-replicate": "^2.0.0",
     "nodemailer": "^6.9.3",
     "openai": "^3.2.1",
+    "page-flip": "^2.0.7",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.10.1",
+    "react-pageflip": "^2.0.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
     "stripe": "^12.1.1",
     "twilio": "^4.10.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
+    "@types/page-flip": "^2.0.0",
     "@types/react": "18.0.21",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/webfontloader": "^1.6.35",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.9.4",
     "webpack-node-externals": "^3.0.0"
   }
