--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.10.1",
     "react-pageflip": "^2.0.3",
+    "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
