--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@leap-ai/sdk": "^0.0.119",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@pdfme/common": "^2.0.2",
+    "@pdfme/generator": "^2.0.2",
+    "@pdfme/ui": "^2.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.52.1",
@@ -23,6 +26,7 @@
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
     "axios": "^1.3.5",
+    "bull": "^4.11.3",
     "child_process": "^1.0.2",
     "ckeditor4-react": "^4.3.0",
     "draft-js": "^0.11.7",
@@ -39,6 +43,8 @@
     "openai": "^3.2.1",
     "page-flip": "^2.0.7",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^21.0.3",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
@@ -52,6 +58,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-spinners": "^0.13.8",
+    "redis": "^4.6.7",
     "stripe": "^12.1.1",
     "twilio": "^4.10.0",
     "uuid": "^9.0.0",
@@ -60,6 +67,7 @@
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/page-flip": "^2.0.0",
+    "@types/pdfkit": "^0.12.10",
     "@types/react": "18.0.21",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
