--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
@@ -38,6 +39,8 @@
     "multer": "^1.4.5-lts.1",
     "next": "^13.3.0",
     "next-auth": "^4.21.1",
+    "next-nprogress-bar": "^2.1.2",
+    "nextjs-progressbar": "^0.0.16",
     "node-replicate": "^2.0.0",
     "nodemailer": "^6.9.3",
     "openai": "^3.2.1",
