separating cover image from pages

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/base": "^5.0.0-beta.14",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@nextui-org/react": "^2.1.12",
+    "@nextui-org/system": "^2.0.9",
+    "@nextui-org/theme": "^2.1.8",
     "@pdfme/common": "^2.0.2",
     "@pdfme/generator": "^2.0.2",
     "@pdfme/ui": "^2.0.2",
@@ -35,6 +38,7 @@
     "encoding": "^0.1.13",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
+    "framer-motion": "^10.16.4",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
