--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@leap-ai/sdk": "^0.0.119",
     "@mui/base": "^5.0.0-beta.14",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.1",
-    "@nextui-org/react": "^2.1.12",
+    "@mui/material": "^5.14.13",
+    "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@pdfme/common": "^2.0.2",
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.52.1",
+    "@swc/helpers": "^0.5.3",
     "@tiptap/pm": "^2.0.4",
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
